--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,8 @@
 ---
 ---
 
-@import 'jekyll-theme-hacker';
+// @import 'jekyll-theme-hacker';
+
+@import '_default_colors';
+// @import 'hacker';
+// @import 'rouge-base16-dark';
