--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-// @import 'jekyll-theme-hacker'; // 暗绿-Hacker
 // @import '_default_colors';  // 白色纯文本
-@import 'hacker';
+@import 'jekyll-theme-hacker'; // 暗绿-Hacker
+// @import 'hacker';  // 暗绿-Hacker
 // @import 'rouge-base16-dark';
