--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,6 @@
 ---
 ---
 
-// @import '_default_colors';  // 白色纯文本
+@import '_default_colors';  // 白色纯文本
 // @import 'jekyll-theme-hacker'; // 暗绿-Hacker
-@import 'rouge-base16-dark';
+// @import 'rouge-base16-dark';
