--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,5 +2,5 @@
 ---
 
 // @import '_default_colors';  // 白色纯文本
-// @import 'jekyll-theme-hacker'; // 暗绿-Hacker
-@import 'rouge-base16-dark';  // 白色带语法高亮
+@import 'jekyll-theme-hacker'; // 暗绿-Hacker
+// @import 'rouge-base16-dark';  // 白色带语法高亮
