--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 
-// @import '_default_colors';  // 白色纯文本
+@import '_default_colors';  // 白色纯文本
 
 // @import 'hacker'; // 暗绿-Hacker
 
-@import 'rouge-base16-dark';  // 白色带语法高亮
+// @import 'rouge-base16-dark';  // 白色带语法高亮
